[tool.poetry]
name = "finrl-podracer"
version = "0.3.2"
description = "finrl 2.0"
authors = ["Xiaoyang Liu <XL2427@columbia.edu>", "Steven Li", "Hongyang Yang", "Jiahao Zheng"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "finrl_podracer"}]
classifiers=[
    # Trove classifiers
    # Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
keywords=["Deep Reinforcment Learning"]
homepage ="https://github.com/AI4Finance-Foundation/FinRL_Podracer"

[tool.poetry.dependencies]
python = "^3.10"
gymnasium = "^0.28.1"
matplotlib = "^3.7.1"
numpy = "^1.24.3"
torch = "^2.0.0"
opencv-python = "*"
yfinance = "^0.2.18"
stockstats = "^0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
